Adicionando  API de endereço

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </div>
       
       <!-- API CEP -->
-      <form action="" class="carrinho header-carrinho">
+      <form action="" class="clock">
         <div class="frm-group">
           <label for="">CEP</label>
           <input type="text" name="cep">
@@ -177,7 +177,7 @@
       </form>
 
   </section>
-
+ <script src="assets/javaScript/main.js"></script>
 </body>
 
 </html>
