--- a/index.html
+++ b/index.html
@@ -139,45 +139,129 @@
 
       </div>
 
-       <div class="carrinho-total">
-         <div class="fila">
+      <div class="carrinho-total">
+        <div class="fila">
           <strong>Total</strong>
           <span class="carrinho-preco-total">
             R$5000
-          </span>  
-         </div>
-         <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
-       </div>
-
+          </span>
+        </div>
+        <button class="btn-pagar">Pagar <i class="fa-solid fa-bag-shopping"></i></button>
       </div>
-      
-      <!-- API CEP -->
-      <form action="" class="clock">
-        <div class="frm-group">
-          <label for="">CEP</label>
-          <input type="text" name="cep">
-        </div>
-        <div class="frm-group">
-          <label for="">Rua</label>
-          <input type="text" name="rua">
-        </div>
-        <div class="frm-group">
-          <label for="">Bairro</label>
-          <input type="text" name="bairro">
-        </div>
-        <div class="frm-group">
-          <label for="">Cidade</label>
-          <input type="text" name="cidade">
-        </div>
-        <div class="frm-group">
-          <label for="">Estado</label>
-          <input type="text" name="estado">
-        </div>
 
-      </form>
+    </div>
+
+    <!-- API CEP -->
+    <form action="" class="clock">
+      <div class="frm-group">
+        <label for="">CEP</label>
+        <input type="text" name="cep">
+      </div>
+      <div class="frm-group">
+        <label for="">Rua</label>
+        <input type="text" name="rua">
+      </div>
+      <div class="frm-group">
+        <label for="">Bairro</label>
+        <input type="text" name="bairro">
+      </div>
+      <div class="frm-group">
+        <label for="">Cidade</label>
+        <input type="text" name="cidade">
+      </div>
+      <div class="frm-group">
+        <label for="">Estado</label>
+        <input type="text" name="estado">
+      </div>
+
+    </form>
 
   </section>
- <script src="assets/javaScript/main.js"></script>
+
+  <footer>
+    <div class="footer_content">
+      <div class="footerContacts">
+        <h1 class="logo">Clock</h1>
+
+        <div class="socialMedia">
+          <a href="#" class="instagram">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="twitter">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="whatsapp">
+            <i class="fa-brands fa-whatsapp"></i>
+          </a>
+          <a href="#" class="facebook">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </div>
+
+      </div>
+      <ul class="footerList">
+
+        <li>
+          <h3>Relógios:</h3>
+        </li>
+        <li>
+          <a href="#">Novos Modelos</a>
+        </li>
+        <li>
+          <a href="#">Rélogios Masculino</a>
+        </li>
+        <li>
+          <a href="#">Relógios Feminios</a>
+        </li>
+        <li>
+          <a href="#">Relógios em Ouro</a>
+        </li>
+      </ul>
+
+
+      <ul class="footerList">
+        <li>
+          <h3>Coleção:</h3>
+        </li>
+        <li>
+          <a href="#">Tommy Hilfiger</a>
+        </li>
+        <li>
+          <a href="#">G-Shock</a>
+        </li>
+        <li>
+          <a href="#">Omega</a>
+        </li>
+        <li>
+          <a href="#">Champion</a>
+        </li>
+      </ul>
+
+      <ul class="footerList">
+        <h3>Serviços:</h3>
+        </li>
+        <li>
+          <a href="#">Destribuidores</a>
+        </li>
+        <li>
+          <a href="#">Cuidado e manutenção</a>
+        </li>
+        <li>
+          <a href="#">Perguntas Frequentes</a>
+        </li>
+
+      </ul>
+
+
+
+
+    </div>
+
+
+
+
+  </footer>
+  <script src="assets/javaScript/main.js"></script>
 </body>
 
 </html>
