mudança no footer display:none

--- a/index.html
+++ b/index.html
@@ -240,8 +240,10 @@
       </ul>
 
       <ul class="footerList">
-        <h3>Serviços:</h3>
+        <li>
+          <h3>Serviços:</h3>
         </li>
+
         <li>
           <a href="#">Destribuidores</a>
         </li>
@@ -255,14 +257,12 @@
       </ul>
 
 
-
-
     </div>
 
 
-
-
   </footer>
+
+  <!-- <script src="assets/javaScript/teste.js"></script> -->
   <script src="assets/javaScript/main.js"></script>
 </body>
 
